Add data usage tracking for cloud print, update client service and search provide logos

BUG=655749

Review-Url: https://codereview.chromium.org/2491733002
Cr-Commit-Position: refs/heads/master@{#432963}

Former-commit-id: 2ca4b1f9ec2d34c10b8147a43c8c781112c68ae9