components/data_use_measurement/core/data_use_user_data.h
@@ -47,6 +47,9 @@ class DataUseUserData : public base::SupportsUserData::Data {
     FEEDBACK_UPLOADER,
     TRACING_UPLOADER,
     DOM_DISTILLER,
+    CLOUD_PRINT,
+    SEARCH_PROVIDER_LOGOS,
+    UPDATE_CLIENT,
   };
 
   // The state of the application. Only available on Android and on other
