components/update_client/url_fetcher_downloader.cc
@@ -12,6 +12,7 @@
 #include "base/location.h"
 #include "base/logging.h"
 #include "base/sequenced_task_runner.h"
+#include "components/data_use_measurement/core/data_use_user_data.h"
 #include "components/update_client/utils.h"
 #include "net/base/load_flags.h"
 #include "net/url_request/url_fetcher.h"
@@ -42,6 +43,8 @@ void UrlFetcherDownloader::DoStartDownload(const GURL& url) {
                              net::LOAD_DISABLE_CACHE);
   url_fetcher_->SetAutomaticallyRetryOn5xx(false);
   url_fetcher_->SaveResponseToTemporaryFile(task_runner());
+  data_use_measurement::DataUseUserData::AttachToFetcher(
+      url_fetcher_.get(), data_use_measurement::DataUseUserData::UPDATE_CLIENT);
 
   VLOG(1) << "Starting background download: " << url.spec();
   url_fetcher_->Start();
